fix: cards name and duration overflow

--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -20,6 +20,9 @@
   font-size: 15px;
   font-weight: 500;
   line-height: 18px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .card__duration {
@@ -29,6 +32,7 @@
   font-size: 13px;
   font-weight: 400;
   line-height: 18px;
+  white-space: nowrap;
 }
 
 .card__image {
@@ -37,6 +41,11 @@
   width: 100%;
   height: 200px;
   transition: 0.8s ease-in-out;
+}
+
+.card__image:hover {
+  cursor: pointer;
+  opacity: .8;
 }
 
 .card__save-button {
